--- a/css/kodomin.css
+++ b/css/kodomin.css
@@ -22,3 +22,20 @@ header img{
 header h1{
 	font-size: 20px;
 }
+
+/* footer */
+footer{
+	margin-top: 60px;
+}
+.footer-menu{
+	padding-left: 0;
+	margin-bottom: 0;
+	display: flex;
+	justify-content: space-around;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	background-color: white;
+	box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.8);
+}
