--- a/css/kodomin.css
+++ b/css/kodomin.css
@@ -39,3 +39,19 @@ footer{
 	background-color: white;
 	box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.8);
 }
+.menu-list{
+	margin: 3% 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+/* .now-page{
+	margin-bottom: 5%;
+} */
+.fas{
+	font-size: 1.5rem;
+}
+.menu-list span{
+	font-size: 0.85rem;
+
+}
