--- a/css/page7.css
+++ b/css/page7.css
@@ -2,11 +2,12 @@ h2{
 text-align: center;
 }
 .bunseki img{
-height: 130px;
+height: 150px;
 width: 80%;
 margin: 0 auto;
 padding: 30px;
 }
 .bunseki p{
   text-align: right;
+  padding: 30px;
 }
