--- a/css/page7.css
+++ b/css/page7.css
@@ -1,13 +1,23 @@
 h2{
 text-align: center;
+margin: 20px 30px 5px 30px ;
+font-weight:normal;
+font-size: 20px;
+}
+.bunseki{
+  padding: 0 30px;
+  text-align: center;
 }
 .bunseki img{
 height: 150px;
 width: 80%;
-margin: 0 auto;
-padding: 30px;
 }
+.img1{
+  margin-bottom: 30px;
+}
+
 .bunseki p{
   text-align: right;
-  padding: 30px;
+  padding: 0 30px;
+  margin-bottom: 0;
 }
