--- a/css/page9.css
+++ b/css/page9.css
@@ -1,22 +1,36 @@
-/* main-headding */
-.main-headding{
-	padding-top: 20px;
-	padding-bottom: 15px;
+h2{
 	text-align: center;
-	border-bottom: 0.75px solid rgb(165, 165, 165);
+}
+p{
+	text-align:center;
+}
+form{
+	text-align: center;
+}
+label{
+	padding:5px;
 }
 
-
-/* main */
-main{
-	margin-top: 5%;
+.sum{
+	margin-top: 30px;
+}
+.btndiv{
+	text-align: center;
+	margin-top: 40px;
+}
+.btn{
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: #FFF;
+  background: #fd9535;/*背景色*/
+  border: solid 2px #d27d00;/*少し濃い目の色に*/
+  border-radius: 4px;/*角の丸み*/
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+  font-weight: bold;
+  padding: 10px 20px;
 }
 
-.sell{
-	text-align: center;
-	font-weight: bolder;
-}
-
-.smallfont{
-	text-align: center;
+.btn:active {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
 }
