--- a/css/kouryaku.css
+++ b/css/kouryaku.css
@@ -5,10 +5,9 @@
 	text-align: center;
 	border-bottom: 0.75px solid rgb(165, 165, 165);
 }
-.kouryakutop{
+.shoptop{
 	width: 30%;
 }
-
 /* main */
 main{
 	margin-top: 5%;
@@ -30,6 +29,7 @@ main{
 }
 .product-sentence{
 	margin-left: 5%;
+  margin-right: 5%;
 }
 .product-name{
 	margin: 0 ;
@@ -41,37 +41,4 @@ main{
 .font-small{
 	font-size: 0.75rem;
 	font-weight: normal;
-}
-
-/* footer */
-footer{
-	margin-top: 60px;
-}
-.footer-menu{
-	padding-left: 0;
-	margin-bottom: 0;
-	display: flex;
-	justify-content: space-around;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: white;
-	box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.8);
-}
-.menu-list{
-	margin: 3% 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-/* .now-page{
-	margin-bottom: 5%;
-} */
-.fas{
-	font-size: 1.5rem;
-}
-.menu-list span{
-	font-size: 0.85rem;
-
 }
