--- a/css/kouryaku.css
+++ b/css/kouryaku.css
@@ -5,6 +5,9 @@
 	text-align: center;
 	border-bottom: 0.75px solid rgb(165, 165, 165);
 }
+.line{
+	border-bottom: 0.75px solid rgb(165, 165, 165);
+}
 .shoptop{
 	width: 30%;
 }
@@ -15,7 +18,6 @@ main{
 .product{
 	display: flex;
 	padding-bottom: 3%;
-	border-bottom: 0.75px solid rgb(165, 165, 165);
 	margin-left: 5%;
 }
 
