--- a/css/page2.css
+++ b/css/page2.css
@@ -5,7 +5,7 @@ p {
   text-align: center;
 }
 form{
-  padding:20px 10px 5px 5px;
+  padding:0px 10px 5px 5px;
   text-align: center;
 }
 input{
@@ -42,4 +42,11 @@ div{
 
 .btn:active {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+}
+
+.flex{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 5%;
 }
