--- a/css/shop2.5.css
+++ b/css/shop2.5.css
@@ -1,48 +1,36 @@
-main{
-	margin-top: 5%;
-}
-.product{
-	display: flex;
-	padding-bottom: 3%;
-	margin-left: 5%
-}
-
-.product-img{
-	width: 100px;
-	height: 100px;
-}
-.product-img img{
-	width: 100%;
-	height: 100%;
-}
-.product-sentence{
-	margin-left: 5%;
-}
-.product-name{
-	margin: 0 ;
-}
-.bold{
-	font-weight: bold;
-	margin: 12px 0 12px;
-}
-.font-small{
-	font-size: 0.75rem;
+h2{
+	text-align: center;
 	font-weight: normal;
 }
-
-
-.line{
-	border-bottom: 0.75px solid rgb(165, 165, 165);
+p{
+	text-align: center;
 }
-.center{
-  text-align:center;
-  padding: 30px;
+.setsumei{
+	margin: auto 10px;
 }
 
+.tane{
+	margin-top: 50px;
+}
+
+.kosuu{
+	margin:20px auto;
+}
+
+
+form{
+  padding:20px 10px 5px 5px;
+  text-align: center;
+}
+input{
+  padding: 5px;
+  text-align: center;
+}
 
 .btndiv{
 	text-align: center;
 	margin-top: 10px;
+	margin-bottom: 40px;
 }
 .margin{
   margin: 0 10px;
@@ -64,6 +52,7 @@ main{
   font-weight:bold;
   font-size: 1.1rem;
   padding: 10px 20px;
+	margin-bottom: 40px;
 }
 
 .btn:active {
