--- a/css/kouryaku2.css
+++ b/css/kouryaku2.css
@@ -14,15 +14,52 @@
 /* main */
 main{
 	margin-top: 5%;
+	padding-bottom: 8%;
 }
 
 h2{
 	margin-left: 5%;
 	font-weight: normal;
+	padding-left: 10%;
+	border-bottom: 2px solid green;
 }
+
+
+/* 文章 */
 .honbun{
-margin-left: 5%;
+	width: 80%;
+	margin: 0 auto;
 }
+
+.honbun h1{
+	font-weight: normal;
+	font-size: 20px;
+	border-bottom: 1px solid green;
+	text-align: center;
+}
+
+p{
+	margin: 0;
+}
+.margin-top{
+	margin-top: 6%;
+}
+
+.img{
+	width: 100%;
+	height: 50%;
+}
+
+ul{
+	padding-left: 0;
+}
+.pointList{
+	margin-top: 8%;
+}
+.margin-top{
+	margin-top: 2%;
+}
+
 .bold{
 	font-weight: bold;
 	margin: 12px 0 12px;
@@ -30,4 +67,10 @@ margin-left: 5%;
 .font-small{
 	font-size: 0.75rem;
 	font-weight: normal;
+}
+
+.center{
+	display: flex;
+	justify-content: center;
+	margin-top: 10%;
 }
