--- a/css/home.css
+++ b/css/home.css
@@ -61,9 +61,11 @@ main{
 	height: 40px;
 	width: 120px;
 	color: white;
-	background-color:rgba(0, 128, 0, 0.671);
-	border-radius: 5px;
-	border-color: rgba(0, 128, 0, 0.384);
+	background: #fd9535;
+    border: solid 2px #d27d00;
+    border-radius: 4px;
+    box-shadow: inset 0 2px 0 rgb(255 255 255 / 20%), 0 2px 2px rgb(0 0 0 / 19%);
+    font-weight: bold;
 }
 
 .margin-right{
