--- a/css/page17.css
+++ b/css/page17.css
@@ -1,12 +1,10 @@
-.news{
-	margin-top: 5%;
-	padding: 0 5% 0 5%;
-}
+
 
 .news-list{
 	margin-top: 3%;
 	padding-bottom: 3%;
 	border-bottom: 1px solid;
+	padding: 0 5% ;
 }
 .news-list time,.news-list a{
 	font-size: 12px;
