home.html のヘッダー画像の大きさを修正。 少しhtml の構造の変化

--- a/css/home.css
+++ b/css/home.css
@@ -46,7 +46,7 @@ main{
 
 /* main-css */
 main{
-	margin-bottom: 60px;
+	margin-bottom: 15%;
 }
 .sell{
 	display: flex;
@@ -109,6 +109,6 @@ main{
 }
 .graph img{
 	height: 100%;
-	width: 90%;
+	width: 70%;
 
 }
