--- a/css/kodomin.css
+++ b/css/kodomin.css
@@ -12,23 +12,32 @@ header{
 	align-items: center;
 	justify-content: space-around;
 	height: 100px;
-	width: 100%;
 	border-bottom: 1px solid rgba(0, 128, 0, 0.692);
 }
-header img{
-	height: 80%;
-	width: 50%;
-}
+
 header h1{
 	font-size: 20px;
+	margin: 0;
+}
+.small{
+	font-size: 12px;
+}
+.header-right{
+	height: 70px;
+	width: 200px;
+}
+.header-right img{
+	width: 100%;
+	height: 100%;
 }
 
 /* footer */
 footer{
-	margin-top: 60px;
+	margin-top: 90px;
 }
 .footer-menu{
 	padding-left: 0;
+	padding-bottom: 3%;
 	margin-bottom: 0;
 	display: flex;
 	justify-content: space-around;
