--- a/css/home.css
+++ b/css/home.css
@@ -86,8 +86,8 @@ main{
 
 .charge{
 	font-size: 8px;
-	margin-left: 5%;
-	padding-top: 1.5%;
+	margin-left: 20px;
+	padding-top: 5.5px;
 }
 
 /* グラフのまとまり */
