--- a/css/kodomin.css
+++ b/css/kodomin.css
@@ -31,6 +31,11 @@ header h1{
 	height: 100%;
 }
 
+.hometop{
+	width: 120px;
+	height: 35px;
+}
+
 /* footer */
 footer{
 	margin-top: 90px;
@@ -54,6 +59,10 @@ footer{
 	flex-direction: column;
 	align-items: center;
 }
+.menu-list a{
+	color: black;
+	text-decoration: none;
+}
 /* .now-page{
 	margin-bottom: 5%;
 } */
@@ -62,5 +71,4 @@ footer{
 }
 .menu-list span{
 	font-size: 0.85rem;
-
 }
