--- a/css/others.css
+++ b/css/others.css
@@ -5,8 +5,9 @@
 	text-align: center;
 	border-bottom: 0.75px solid rgb(165, 165, 165);
 }
-.otherstop{
-	width: 30%;
+.hometop{
+	width: 120px;
+	height: 35px;
 }
 ul{
 	margin: 0;
@@ -20,5 +21,8 @@ ul{
 	display: flex;
 	align-items: center;
 	border-bottom: 0.75px solid rgb(165, 165, 165);
+}
 
+a{
+	text-decoration: none;
 }
