--- a/css/page5.css
+++ b/css/page5.css
@@ -1,16 +1,25 @@
-.top{
-text-align:center;
-width: 100%;
+.body .topdiv2{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 .topdiv1{
-  margin-top: 100px;
+	display: flex;
+	justify-content: center;
+}
+.top{
+	height: 115px;
+	width: 360px;
 }
 .topdiv2{
   text-align: center;
   margin-top: 50px;
 }
 form{
-  padding:20px 10px 5px 5px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
@@ -39,4 +48,9 @@ input{
 .btn:active {
 
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+}
+
+
+.kesi{
+	text-align: center;
 }
