--- a/css/page9.css
+++ b/css/page9.css
@@ -5,6 +5,9 @@ p{
 	text-align:center;
 }
 form{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	text-align: center;
 }
 label{
